Try the android flow

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.whitelabel">
+    package="io.codemagic.whitelabel001">
    <application
         android:label="whitelabel"
         android:name="${applicationName}"
