--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -230,5 +230,5 @@ workflows:
     artifacts: 
       - *apk
       - *aab
-    # publishing:
-    #   <<: *play_store_publish
+    publishing:
+      <<: *play_store_publish
