--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -217,7 +217,7 @@ workflows:
         CM_KEY_PASSWORD: $CM_KEY_PASSWORD
         CM_KEY_ALIAS: $CM_KEY_ALIAS
         CM_KEYSTORE_PATH: $CM_KEYSTORE_PATH
-        GCLOUD_SERVICE_ACCOUNT_CREDENTIALS: $GCLOUD_SERVICE_ACCOUNT_CREDENTIALS
+        # GCLOUD_SERVICE_ACCOUNT_CREDENTIALS: $GCLOUD_SERVICE_ACCOUNT_CREDENTIALS
     scripts:
       - *get_assets
       - *set_variables
