--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -145,6 +145,7 @@ definitions:
       credentials: $GCLOUD_SERVICE_ACCOUNT_CREDENTIALS
       track: $GOOGLE_PLAY_TRACK 
       submit_as_draft: true
+      changes_not_sent_for_review: true
   email_publish: &email_publish
     email: 
       recipients:
@@ -213,11 +214,11 @@ workflows:
       vars:
         CLIENT_ID: "004"
         GOOGLE_PLAY_TRACK: internal
-        PACKAGE_NAME: $PACKAGE_NAME
-        CM_KEYSTORE_PASSWORD: $CM_KEYSTORE_PASSWORD
-        CM_KEY_PASSWORD: $CM_KEY_PASSWORD
-        CM_KEY_ALIAS: $CM_KEY_ALIAS
-        CM_KEYSTORE_PATH: $CM_KEYSTORE_PATH
+        # PACKAGE_NAME: $PACKAGE_NAME
+        # CM_KEYSTORE_PASSWORD: $CM_KEYSTORE_PASSWORD
+        # CM_KEY_PASSWORD: $CM_KEY_PASSWORD
+        # CM_KEY_ALIAS: $CM_KEY_ALIAS
+        # CM_KEYSTORE_PATH: $CM_KEYSTORE_PATH
         # GCLOUD_SERVICE_ACCOUNT_CREDENTIALS: $GCLOUD_SERVICE_ACCOUNT_CREDENTIALS
     scripts:
       - *get_assets
