--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -223,7 +223,7 @@ workflows:
       - *set_client_id
       - *change_android_icons
       - *set_image
-      # - *android_code_signing
+      - *android_code_signing
       - *build_apk
       - *build_aab
     artifacts: 
