--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -95,7 +95,7 @@ definitions:
       name: Flutter build aab and automatic versioning
       script: |
         # BUILD_NUMBER=$(($(google-play get-latest-build-number --package-name "$PACKAGE_NAME" --tracks="$GOOGLE_PLAY_TRACK") + 1))
-        BUILD_NUMBER=2
+        BUILD_NUMBER=3
         flutter build appbundle --release \
         --build-name=1.0.$BUILD_NUMBER \
         --build-number=$BUILD_NUMBER
@@ -210,6 +210,7 @@ workflows:
       vars:
         CLIENT_ID: "004"
         GOOGLE_PLAY_TRACK: internal
+        GCLOUD_SERVICE_ACCOUNT_CREDENTIALS: $BASE_GCLOUD_SERVICE_ACCOUNT_CREDENTIALS
     scripts:
       - *get_assets
       - *set_variables
