--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -51,7 +51,7 @@ definitions:
         echo "GCLOUD_SERVICE_ACCOUNT_CREDENTIALS<<DELIMITER" >> $CM_ENV
         echo "$GCLOUD_SERVICE_ACCOUNT_CREDENTIALS" >> $CM_ENV
         echo "DELIMITER" >> $CM_ENV
-        export GCLOUD_SERVICE_ACCOUNT_CREDENTIALS=$GCLOUD_SERVICE_ACCOUNT_CREDENTIALS
+        export GCLOUD_SERVICE_ACCOUNT_CREDENTIALS="$GCLOUD_SERVICE_ACCOUNT_CREDENTIALS"
 
         # iOS stuff
         echo "APP_STORE_CONNECT_KEY_IDENTIFIER=$APP_STORE_CONNECT_KEY_IDENTIFIER" >> $CM_ENV
