--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -51,7 +51,7 @@ definitions:
         echo "PLAYSTORE_CREDENTIALS<<DELIMITER" >> $CM_ENV
         echo "$GCLOUD_SERVICE_ACCOUNT_CREDENTIALS" >> $CM_ENV
         echo "DELIMITER" >> $CM_ENV
-        export PLAYSTORE_CREDENTIALS="$GCLOUD_SERVICE_ACCOUNT_CREDENTIALS"
+        # export PLAYSTORE_CREDENTIALS="$GCLOUD_SERVICE_ACCOUNT_CREDENTIALS"
 
         # iOS stuff
         echo "APP_STORE_CONNECT_KEY_IDENTIFIER=$APP_STORE_CONNECT_KEY_IDENTIFIER" >> $CM_ENV
@@ -227,5 +227,5 @@ workflows:
       - *apk
       - *aab
     publishing:
-      # <<: *play_store_publish
-      <<: *email_publish
+      <<: *play_store_publish
+      # <<: *email_publish
