--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -48,10 +48,11 @@ definitions:
         echo "CM_KEY_ALIAS=$CM_KEY_ALIAS" >> $CM_ENV
         echo "CM_KEYSTORE_PATH=$CM_KEYSTORE_PATH" >> $CM_ENV
 
-        echo "PLAYSTORE_CREDENTIALS<<DELIMITER" >> $CM_ENV
-        echo "$GCLOUD_SERVICE_ACCOUNT_CREDENTIALS" >> $CM_ENV
-        echo "DELIMITER" >> $CM_ENV
+        # echo "PLAYSTORE_CREDENTIALS<<DELIMITER" >> $CM_ENV
+        # echo "$GCLOUD_SERVICE_ACCOUNT_CREDENTIALS" >> $CM_ENV
+        # echo "DELIMITER" >> $CM_ENV
         # export PLAYSTORE_CREDENTIALS="$GCLOUD_SERVICE_ACCOUNT_CREDENTIALS"
+        echo "PLAYSTORE_CREDENTIALS=$GCLOUD_SERVICE_ACCOUNT_CREDENTIALS" >> $CM_ENV
 
         # iOS stuff
         echo "APP_STORE_CONNECT_KEY_IDENTIFIER=$APP_STORE_CONNECT_KEY_IDENTIFIER" >> $CM_ENV
