--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -35,9 +35,9 @@ definitions:
       script: |
         cp -r ./client_assets/client.env assets/client.env
     - &set_gcloud-service-account
-      name: Set environment variables from settings.env
+      name: Set GCloud service account
       script: |
-        echo "GCLOUD_SERVICE_ACCOUNT_CREDENTIALS=\"`sed -E 's/$/\\\n/g' ./client_assets/gcloud-service-account.json`\"" >> $CM_ENV
+        echo "GCLOUD_SERVICE_ACCOUNT_CREDENTIALS=\"`sed -e :a -e '$!N;s/ *\n */ /;ta' -e 'P;D' ./client_assets/gcloud-service-account.json`\"" >> $CM_ENV
     - &set_variables
       name: Set environment variables from settings.env
       script: |
