--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -53,9 +53,9 @@ definitions:
         echo "CM_KEY_ALIAS=$CM_KEY_ALIAS" >> $CM_ENV
         echo "CM_KEYSTORE_PATH=$CM_KEYSTORE_PATH" >> $CM_ENV
 
-        echo "BASE_GCLOUD_SERVICE_ACCOUNT_CREDENTIALS<<DELIMITER" >> $CM_ENV
+        echo 'BASE_GCLOUD_SERVICE_ACCOUNT_CREDENTIALS<<DELIMITER' >> $CM_ENV
         echo "$BASE_GCLOUD_SERVICE_ACCOUNT_CREDENTIALS" >> $CM_ENV
-        echo "DELIMITER" >> $CM_ENV
+        echo 'DELIMITER' >> $CM_ENV
         # echo "PLAYSTORE_CREDENTIALS<<DELIMITER" >> $CM_ENV
         # echo "$GCLOUD_SERVICE_ACCOUNT_CREDENTIALS" >> $CM_ENV
         # echo "DELIMITER" >> $CM_ENV
