--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -149,7 +149,8 @@ definitions:
       issuer_id: $APP_STORE_CONNECT_ISSUER_ID
   play_store_publish: &play_store_publish
     google_play:
-      credentials: $GCLOUD_SERVICE_ACCOUNT_CREDENTIALS
+      credentials: $MOHAMMED_GCLOUD_SERVICE_ACCOUNT_CREDENTIALS
+      # credentials: $GCLOUD_SERVICE_ACCOUNT_CREDENTIALS
       track: $GOOGLE_PLAY_TRACK 
       submit_as_draft: true
       changes_not_sent_for_review: true
