--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -53,9 +53,9 @@ definitions:
         echo "CM_KEY_ALIAS=$CM_KEY_ALIAS" >> $CM_ENV
         echo "CM_KEYSTORE_PATH=$CM_KEYSTORE_PATH" >> $CM_ENV
 
-        # echo 'BASE_GCLOUD_SERVICE_ACCOUNT_CREDENTIALS<<DELIMITER' >> $CM_ENV
-        # echo "$BASE_GCLOUD_SERVICE_ACCOUNT_CREDENTIALS" >> $CM_ENV
-        # echo 'DELIMITER' >> $CM_ENV
+        echo 'GCLOUD_SERVICE_ACCOUNT_CREDENTIALS<<DELIMITER' >> $CM_ENV
+        echo "$GCLOUD_SERVICE_ACCOUNT_CREDENTIALS" >> $CM_ENV
+        echo 'DELIMITER' >> $CM_ENV
 
         # echo "PLAYSTORE_CREDENTIALS<<DELIMITER" >> $CM_ENV
         # echo "$GCLOUD_SERVICE_ACCOUNT_CREDENTIALS" >> $CM_ENV
@@ -151,7 +151,7 @@ definitions:
   play_store_publish: &play_store_publish
     google_play:
       # credentials: $MOHAMMED_GCLOUD_SERVICE_ACCOUNT_CREDENTIALS
-      credentials: $GCLOUD_SERVICE_ACCOUNT_CREDENTIALS
+      credentials: $GCLOUD_SERVICE_ACCOUNT_CREDENTIALS_HOLDER
       track: $GOOGLE_PLAY_TRACK 
       submit_as_draft: true
       changes_not_sent_for_review: true
@@ -223,11 +223,11 @@ workflows:
       vars:
         CLIENT_ID: "004"
         GOOGLE_PLAY_TRACK: internal
-        GCLOUD_SERVICE_ACCOUNT_CREDENTIALS: $BASE_GCLOUD_SERVICE_ACCOUNT_CREDENTIALS
+        GCLOUD_SERVICE_ACCOUNT_CREDENTIALS_HOLDER: $GCLOUD_SERVICE_ACCOUNT_CREDENTIALS
         # PLAYSTORE_CREDENTIALS: $BASE_GCLOUD_SERVICE_ACCOUNT_CREDENTIALS
     scripts:
       - *get_assets
-      - *set_gcloud-service-account
+      # - *set_gcloud-service-account
       - *set_variables
       - *install_dependencies
       - *set_package_name
