--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -34,18 +34,12 @@ definitions:
       name: Set client id
       script: |
         cp -r ./client_assets/client.env assets/client.env
-    - &set_gcloud-service-account
-      name: Set GCloud service account
+  android_scripts:
+    - &set_android_variables
+      name: Set Android environment variables from settings.env
       script: |
-        # echo "GCLOUD_SERVICE_ACCOUNT_CREDENTIALS=\"`sed -e :a -e '$!N;s/ *\n */ /;ta' -e 'P;D' ./client_assets/gcloud-service-account.json`\"" >> $CM_ENV
-        echo "BASE_GCLOUD_SERVICE_ACCOUNT_CREDENTIALS=\"`sed -e :a -e '$!N;s/ *\n */ /;ta' -e 'P;D' ./client_assets/gcloud-service-account.json`\"" >> $CM_ENV
-    - &set_variables
-      name: Set environment variables from settings.env
-      script: |
-
         source ./client_assets/settings.env
 
-        # Android stuff
         echo "PACKAGE_NAME=$PACKAGE_NAME" >> $CM_ENV
 
         echo "CM_KEYSTORE_PASSWORD=$CM_KEYSTORE_PASSWORD" >> $CM_ENV
@@ -56,31 +50,6 @@ definitions:
         echo 'GCLOUD_SERVICE_ACCOUNT_CREDENTIALS<<DELIMITER' >> $CM_ENV
         echo "$GCLOUD_SERVICE_ACCOUNT_CREDENTIALS" >> $CM_ENV
         echo 'DELIMITER' >> $CM_ENV
-
-        # echo "PLAYSTORE_CREDENTIALS<<DELIMITER" >> $CM_ENV
-        # echo "$GCLOUD_SERVICE_ACCOUNT_CREDENTIALS" >> $CM_ENV
-        # echo "DELIMITER" >> $CM_ENV
-        # export PLAYSTORE_CREDENTIALS="$GCLOUD_SERVICE_ACCOUNT_CREDENTIALS"
-        # echo "PLAYSTORE_CREDENTIALS='$GCLOUD_SERVICE_ACCOUNT_CREDENTIALS'" >> $CM_ENV
-        # echo "PLAYSTORE_CREDENTIALS=\"`sed -E 's/$/\\\n/g' $GCLOUD_SERVICE_ACCOUNT_CREDENTIALS`\"" >> .env
-
-        # iOS stuff
-        echo "APP_STORE_CONNECT_KEY_IDENTIFIER=$APP_STORE_CONNECT_KEY_IDENTIFIER" >> $CM_ENV
-        echo "APP_STORE_CONNECT_ISSUER_ID=$APP_STORE_CONNECT_ISSUER_ID" >> $CM_ENV
-
-        echo "BUNDLE_ID=$BUNDLE_ID" >> $CM_ENV
-        echo "APP_STORE_ID=$APP_STORE_ID" >> $CM_ENV
-
-        echo "APP_STORE_CONNECT_PRIVATE_KEY<<DELIMITER" >> $CM_ENV
-        echo "$APP_STORE_CONNECT_PRIVATE_KEY" >> $CM_ENV
-        echo "DELIMITER" >> $CM_ENV
-
-        echo "CERTIFICATE_PRIVATE_KEY<<DELIMITER" >> $CM_ENV
-        echo "$CERTIFICATE_PRIVATE_KEY" >> $CM_ENV
-        echo "DELIMITER" >> $CM_ENV
-
-
-    # ----- Android scripts only -----
     - &set_package_name
       name: Set Package name
       script: |
@@ -112,8 +81,26 @@ definitions:
         --build-name=1.0.$BUILD_NUMBER \
         --build-number=$BUILD_NUMBER
 
+  ios_scripts:
+    - &set_ios_variables
+      name: Set iOS environment variables from settings.env
+      script: |
+        source ./client_assets/settings.env
 
-    # ----- iOS scripts only -----
+        echo "APP_STORE_CONNECT_KEY_IDENTIFIER=$APP_STORE_CONNECT_KEY_IDENTIFIER" >> $CM_ENV
+        echo "APP_STORE_CONNECT_ISSUER_ID=$APP_STORE_CONNECT_ISSUER_ID" >> $CM_ENV
+
+        echo "BUNDLE_ID=$BUNDLE_ID" >> $CM_ENV
+        echo "APP_STORE_ID=$APP_STORE_ID" >> $CM_ENV
+
+        echo "APP_STORE_CONNECT_PRIVATE_KEY<<DELIMITER" >> $CM_ENV
+        echo "$APP_STORE_CONNECT_PRIVATE_KEY" >> $CM_ENV
+        echo "DELIMITER" >> $CM_ENV
+
+        echo "CERTIFICATE_PRIVATE_KEY<<DELIMITER" >> $CM_ENV
+        echo "$CERTIFICATE_PRIVATE_KEY" >> $CM_ENV
+        echo "DELIMITER" >> $CM_ENV
+
     - &install_pods
       name: Install pods
       script: find . -name "Podfile" -execdir pod install \;
@@ -150,7 +137,6 @@ definitions:
       issuer_id: $APP_STORE_CONNECT_ISSUER_ID
   play_store_publish: &play_store_publish
     google_play:
-      # credentials: $MOHAMMED_GCLOUD_SERVICE_ACCOUNT_CREDENTIALS
       credentials: $GCLOUD_SERVICE_ACCOUNT_CREDENTIALS_HOLDER
       track: $GOOGLE_PLAY_TRACK 
       submit_as_draft: true
@@ -188,15 +174,9 @@ workflows:
       vars:
         XCODE_WORKSPACE: "ios/Runner.xcworkspace"
         XCODE_SCHEME: "Runner"
-        APP_STORE_CONNECT_PRIVATE_KEY: $APP_STORE_CONNECT_PRIVATE_KEY
-        APP_STORE_CONNECT_KEY_IDENTIFIER: $APP_STORE_CONNECT_KEY_IDENTIFIER
-        APP_STORE_CONNECT_ISSUER_ID: $APP_STORE_CONNECT_ISSUER_ID
-        CERTIFICATE_PRIVATE_KEY: $CERTIFICATE_PRIVATE_KEY
-        BUNDLE_ID: $BUNDLE_ID
-        APP_STORE_ID: $APP_STORE_ID
     scripts:
       - *get_assets
-      - *set_variables
+      - *set_ios_variables
       - *install_dependencies
       - *install_pods
       - *set_bundle_id
@@ -224,11 +204,9 @@ workflows:
         CLIENT_ID: "004"
         GOOGLE_PLAY_TRACK: internal
         GCLOUD_SERVICE_ACCOUNT_CREDENTIALS_HOLDER: $GCLOUD_SERVICE_ACCOUNT_CREDENTIALS
-        # PLAYSTORE_CREDENTIALS: $BASE_GCLOUD_SERVICE_ACCOUNT_CREDENTIALS
     scripts:
       - *get_assets
-      # - *set_gcloud-service-account
-      - *set_variables
+      - *set_android_variables
       - *install_dependencies
       - *set_package_name
       - *set_client_id
@@ -241,8 +219,5 @@ workflows:
       - *apk
       - *aab
     publishing:
-    #   scripts:
-    #     - echo $BASE_GCLOUD_SERVICE_ACCOUNT_CREDENTIALS
-    #     - echo $GCLOUD_SERVICE_ACCOUNT_CREDENTIALS
       <<: *play_store_publish
       # <<: *email_publish
